@@ -14,33 +14,6 @@ our $VERSION = '0.002012';
 use Moose qw( extends has );
 extends 'Dist::Zilla::Plugin::NextRelease';
 
-=head1 SYNOPSIS
-
-This module acts as a moderately thin wrapper to L<< C<[NextRelease]>|Dist::Zilla::Plugin::NextRelease >>
-so that the time-stamps produced are generated by asking C<git> for the time-stamp of the current branch.
-
-If you always require a specific branch for generating time-stamps, it can be specified as a parameter.
-
-    -[NextRelease]
-    +[Git::NextRelease]
-
-Optionally:
-
-    +branch = master
-
-Or:
-
-    +default_branch = master
-
-( The latter only having impact in detached-head conditions )
-
-This exists mostly because of my extensive use of L<< C<[Git::CommitBuild]>|Dist::Zilla::Plugin::Git::CommitBuild >>, to provide
-a commit series for both releases, and builds of all changes/commits in order to push them to Travis for testing. ( Mostly,
-because testing a build branch is substantially faster than testing a master that requires C<Dist::Zilla>, especially if you're
-doing "Fresh install" testing like I am. )
-
-=cut
-
 use Git::Wrapper::Plus 0.003100;    # Fixed shallow commits
 use DateTime;
 
@@ -167,3 +140,30 @@ __PACKAGE__->meta->make_immutable;
 no Moose;
 
 1;
+
+=head1 SYNOPSIS
+
+This module acts as a moderately thin wrapper to L<< C<[NextRelease]>|Dist::Zilla::Plugin::NextRelease >>
+so that the time-stamps produced are generated by asking C<git> for the time-stamp of the current branch.
+
+If you always require a specific branch for generating time-stamps, it can be specified as a parameter.
+
+    -[NextRelease]
+    +[Git::NextRelease]
+
+Optionally:
+
+    +branch = master
+
+Or:
+
+    +default_branch = master
+
+( The latter only having impact in detached-head conditions )
+
+This exists mostly because of my extensive use of L<< C<[Git::CommitBuild]>|Dist::Zilla::Plugin::Git::CommitBuild >>, to provide
+a commit series for both releases, and builds of all changes/commits in order to push them to Travis for testing. ( Mostly,
+because testing a build branch is substantially faster than testing a master that requires C<Dist::Zilla>, especially if you're
+doing "Fresh install" testing like I am. )
+
+=cut
