@@ -1,11 +1,22 @@
 Release history for Dist-Zilla-Plugin-Git-NextRelease
 
 {{$NEXT}}
+ [00 Trivial]
+ - no code changes
+ - tests augmented
+ - whitespace adjusted.
+
  [Dependencies::Stats]
  - Dependencies changed since 0.002011, see misc/*.deps* for details
  - configure: ↓1
  - develop: +1 (suggests: ↑1)
  - test: +1 -3 (recommends: ↑1 -1)
+
+ [Misc]
+ - Improve source side POD to reduce build side whitespace.
+
+ [Tests]
+ - update Test::ReportPrereqs
 
 0.002011 2014-07-16T14:58:54Z
  [00 Trivial]
